# django-spaces-files

./: Readme.md  setup.cfg
spaces_files/: __init__.py  apps.py  decorators.py  forms.py  models.py  servers.py  signals.py  tests.py  urls.py  views.py
spaces_files/migrations/: 0001_initial.py  0002_auto_20151121_1756.py  0003_auto_20151121_1821.py  0004_auto_20151121_1827.py  0005_auto_20151123_1031.py  0006_auto_20160111_1024.py  0007_auto_20160223_1545.py  0008_auto_20200422_1110.py  0009_auto_20210503_1145.py
spaces_files/templates/spaces_files/: add_file.html  add_folder.html  file.html  folder_confirm_delete.html  folders.html  icon.html  index.html  subfolder.html
spaces_files/templates/spaces_files/includes/: form.html
spaces_files/templatetags/: files_tags.py
