[metadata]
name = django_files
author = Mattes Sarcander
description = Simple file manager app for Django Collab platform
version = 0.1
url = https:///github.com/Fortschritt/django-spaces-files
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4